--- a/src/assets/sass/base/_base.sass
+++ b/src/assets/sass/base/_base.sass
@@ -1,3 +1,4 @@
 body 
     font-family: 'text'
-    font-variation-settings: 'wght' 400
+    font-variation-settings: 'wght' 375
+    font-size: .9rem
