--- a/src/assets/sass/base/_font.sass
+++ b/src/assets/sass/base/_font.sass
@@ -1,5 +1,5 @@
 @font-face
     font-family: 'text'
-    src: url('../font/SourceCodeVariable-Roman.woff2') format('woff2-variations')
+    src: url('../font/FiraCode-VF.woff2')
     font-weight: 200 900
     font-style: normal
