--- a/src/assets/sass/themes/_dark.sass
+++ b/src/assets/sass/themes/_dark.sass
@@ -1,8 +1,22 @@
 body 
     background-color: $color__black
-a 
     color: $color__white
 .nav__menu > ul
-    border-top-color: $color__white
-    & > li
-        border-right-color: $color__white
+    background-color: $color__black
+    & > li > a
+        box-shadow: inset 1px 1px $color__white
+    & > li:first-child > a
+        box-shadow: inset 0 1px $color__white
+
+.nav__config
+    background-color: $color__black
+    & > ul > li > a
+        box-shadow: inset 1px -1px $color__white
+    
+
+.header
+    box-shadow: $color__white
+
+.nav__menu--active
+    background-color: $color__red
+    color: $color__yellow
