--- a/src/assets/sass/abstracts/_variables.sass
+++ b/src/assets/sass/abstracts/_variables.sass
@@ -1,8 +1,9 @@
 // ----------
 // COLORS
 // ----------
-$color__black: #000000
+$color__black: #191919
 $color__white: #ffffff
 $color__red: #BA2123
-$color__bkue: #306998
+$color__blue: #306998
 $color__yellow: #FFD43B
+$color__light-gray: #BBBBBB
