welcome views ready

--- a/src/assets/sass/themes/_dark.sass
+++ b/src/assets/sass/themes/_dark.sass
@@ -21,8 +21,13 @@ body
     background-color: $color__red
     color: $color__yellow
 
-.welcome__list-item
+.welcome__lang,
+.welcome__confirm
     box-shadow: inset 0 -1px $color__light-gray
+.welcome__mode
+    border-bottom: 1px solid $color__light-gray
 
 .forward
     box-shadow: inset 1px 0 $color__light-gray
+.backward
+    box-shadow: inset -1px 0 $color__light-gray
