--- a/src/assets/sass/main.sass
+++ b/src/assets/sass/main.sass
@@ -5,6 +5,6 @@
 @import "base/base"
 @import "layout/nav"
 @import "layout/header"
-@import "components/forward"
+@import "components/forward-backward"
 @import "pages/welcome"
 @import "themes/dark"
