--- a/src/assets/sass/pages/_welcome.sass
+++ b/src/assets/sass/pages/_welcome.sass
@@ -1,7 +1,51 @@
 .welcome
-    &__list-item > a
+    &__lang > label
+        position: relative
+        & > input
+            position: absolute
+            height: 3rem
+            width: 100vw
+            opacity: 0
+        & > div
+            display: flex
+            justify-content: space-between
+            align-items: center
+            & > span
+                display: inline-block
+                padding-right: 1rem
+                padding-left: 1rem
+                width: calc(100% - 5rem)
+    &__mode
+        display: flex
+        &--item
+            width: 50%
+        &--dark,
+        &--light
+            position: relative
+            display: flex
+            justify-content: space-between
+            align-items: center
+            padding-left: 1rem
+            padding-right: 1rem
+            height: 3rem
+            & > input
+                position: absolute
+                left: 0
+                height: 3rem
+                width: 50vw
+                opacity: 0
+        &--dark
+            background-color: $color__black
+            color: $color__white
+        &--light
+            background-color: $color__white
+            color: $color__blue
+    &__confirm > a
         display: flex
         justify-content: space-between
         align-items: center
-        padding-left: 1rem
-        font-size: 1.1rem
+        & > span
+            display: inline-block
+            padding-left: 1rem
+            padding-right: 1rem
+            width: calc(100% - 5rem)
