config page start

--- a/src/assets/sass/main.sass
+++ b/src/assets/sass/main.sass
@@ -7,4 +7,5 @@
 @import "layout/header"
 @import "components/forward-backward"
 @import "pages/welcome"
+@import "pages/config"
 @import "themes/dark"
