--- a/src/assets/sass/pages/_welcome.sass
+++ b/src/assets/sass/pages/_welcome.sass
@@ -30,9 +30,10 @@
             height: 3rem
             & > input
                 position: absolute
+                display: block
                 left: 0
-                height: 3rem
-                width: 50vw
+                height: 100%
+                width: 100%
                 opacity: 0
         &--dark
             background-color: $color__black
