--- a/src/assets/sass/themes/_dark.sass
+++ b/src/assets/sass/themes/_dark.sass
@@ -24,7 +24,8 @@ body
 .welcome__lang,
 .welcome__confirm
     box-shadow: inset 0 -1px $color__light-gray
-.welcome__mode
+.welcome__mode,
+.config__mode
     border-bottom: 1px solid $color__light-gray
 
 .forward
