--- a/src/assets/sass/themes/_dark.sass
+++ b/src/assets/sass/themes/_dark.sass
@@ -1,34 +1,36 @@
 body 
-    background-color: $color__black
-    color: $color__white
+  background-color: $color__black
+  color: $color__white
+
 .nav__menu > ul
-    background-color: $color__black
-    & > li > a
-        box-shadow: inset 1px 1px $color__light-gray
-    & > li:first-child > a
-        box-shadow: inset 0 1px $color__light-gray
+  background-color: $color__black
+  & > li > a
+    box-shadow: inset 1px 1px $color__light-gray
+  & > li:first-child > a
+    box-shadow: inset 0 1px $color__light-gray
 
 .nav__config
-    background-color: $color__black
-    & > ul > li > a
-        box-shadow: inset 1px -1px $color__light-gray
-    
+  background-color: $color__black
+  & > ul > li > a
+    box-shadow: inset 1px -1px $color__light-gray
 
 .header
-    box-shadow: inset 0 -1px $color__light-gray
+  box-shadow: inset 0 -1px $color__light-gray
 
 .nav__menu--active
-    background-color: $color__red
-    color: $color__yellow
+  background-color: $color__red
+  color: $color__yellow
 
 .welcome__lang,
 .welcome__confirm
-    box-shadow: inset 0 -1px $color__light-gray
+  box-shadow: inset 0 -1px $color__light-gray
 .welcome__mode,
 .config__mode
-    border-bottom: 1px solid $color__light-gray
+  border-bottom: 1px solid $color__light-gray
+.config__lang > label
+  box-shadow: inset 1px 1px $color__light-gray, inset 0 -1px $color__light-gray
 
 .forward
-    box-shadow: inset 1px 0 $color__light-gray
+  box-shadow: inset 1px 0 $color__light-gray
 .backward
-    box-shadow: inset -1px 0 $color__light-gray
+  box-shadow: inset -1px 0 $color__light-gray
