intent space changed + favs view started

--- a/src/assets/sass/main.sass
+++ b/src/assets/sass/main.sass
@@ -6,6 +6,8 @@
 @import "layout/nav"
 @import "layout/header"
 @import "components/forward-backward"
+@import "components/return"
+@import "components/days"
 @import "pages/welcome"
 @import "pages/config"
 @import "themes/dark"
