--- a/src/assets/sass/layout/_nav.sass
+++ b/src/assets/sass/layout/_nav.sass
@@ -38,7 +38,7 @@
       width: 100%
     & > ul > .nav__menu--favs
       color: $color__red
-      font-variation-settings: 'wght' 700
+      font-weight: 700
       & > a
         flex-direction: column
         font-size: 14px
