--- a/src/assets/sass/pages/_config.sass
+++ b/src/assets/sass/pages/_config.sass
@@ -31,10 +31,11 @@
       position: relative
       margin-left: 1rem
       margin-top: 1rem
-      min-height: calc(3rem - 1rem)
+      min-height: 3rem
       display: flex
       align-items: center
-      padding: .5rem
+      padding-left: 1rem
+      padding-right: 1rem
       & > input
         position: absolute
         display: block
