--- a/src/assets/sass/themes/_dark.sass
+++ b/src/assets/sass/themes/_dark.sass
@@ -13,24 +13,20 @@ body
   background-color: $color__black
   & > ul > li > a
     box-shadow: inset 1px -1px $color__light-gray
-
-.header
-  box-shadow: inset 0 -1px $color__light-gray
-
 .nav__menu--active
   background-color: $color__red
   color: $color__yellow
 
-.welcome__lang,
-.welcome__confirm
+.border-shadow-bottom
   box-shadow: inset 0 -1px $color__light-gray
-.welcome__mode,
-.config__mode
+
+.border-bottom
   border-bottom: 1px solid $color__light-gray
-.config__lang > label
+
+.border-shadow-top-bottom-left
   box-shadow: inset 1px 1px $color__light-gray, inset 0 -1px $color__light-gray
 
-.forward
+.border-shadow-left
   box-shadow: inset 1px 0 $color__light-gray
-.backward
+.border-shadow-right
   box-shadow: inset -1px 0 $color__light-gray
