favs view design

--- a/src/assets/sass/base/_base.sass
+++ b/src/assets/sass/base/_base.sass
@@ -2,3 +2,8 @@ body
   font-family: 'text'
   font-weight: 375
   font-size: .9rem
+  line-height: 1.2rem
+.container
+  padding-top: 1rem
+  padding-left: 1rem
+  padding-bottom: 1rem
