--- a/src/assets/sass/components/_days.sass
+++ b/src/assets/sass/components/_days.sass
@@ -3,7 +3,8 @@
   align-items: center
   position: -webkit-sticky
   position: sticky
-  top: 3rem
+  top: 44px
+  z-index: 5
   &__date
     width: calc(100% - 6rem - 2rem)
     display: flex
