--- a/src/assets/sass/themes/_dark.sass
+++ b/src/assets/sass/themes/_dark.sass
@@ -17,16 +17,33 @@ body
   background-color: $color__red
   color: $color__yellow
 
+.border-shadow-top
+  box-shadow: inset 0 1px $color__light-gray
 .border-shadow-bottom
   box-shadow: inset 0 -1px $color__light-gray
 
+.border-shadow-y
+  box-shadow: inset 0 1px $color__light-gray, inset 0 -1px $color__light-gray
+
 .border-bottom
   border-bottom: 1px solid $color__light-gray
+.border-y
+  border-bottom: 1px solid $color__light-gray
+  border-top: 1px solid $color__light-gray
 
-.border-shadow-top-bottom-left
+.border-shadow-y-left
   box-shadow: inset 1px 1px $color__light-gray, inset 0 -1px $color__light-gray
 
 .border-shadow-left
   box-shadow: inset 1px 0 $color__light-gray
 .border-shadow-right
   box-shadow: inset -1px 0 $color__light-gray
+
+.func-text,
+.favs-text
+  color: $color__yellow
+
+.bg-main
+  background-color: $color__black
+.bg-favs
+  background-color: $color__blue
