welcome, favs, event, config views ready

--- a/src/assets/sass/components/_days.sass
+++ b/src/assets/sass/components/_days.sass
@@ -3,7 +3,7 @@
   align-items: center
   position: -webkit-sticky
   position: sticky
-  top: 44px
+  top: calc(3rem - 1px)
   z-index: 5
   &__date
     width: calc(100% - 6rem - 2rem)
