--- a/src/assets/sass/layout/_header.sass
+++ b/src/assets/sass/layout/_header.sass
@@ -5,9 +5,7 @@
   display: flex
   flex-direction: column
   justify-content: flex-end
-  & > h1
-    font-size: 1.1rem
   & > h1:last-child
     margin-top: .25rem
-    & > strong
-      font-weight: 600
+    & > span
+      font-weight: 375
