--- a/src/assets/sass/main.sass
+++ b/src/assets/sass/main.sass
@@ -1,8 +1,10 @@
 @import "vendor/normalize"
 @import "abstracts/variables"
+@import "abstracts/mixin"
 @import "base/font"
 @import "base/reset"
 @import "base/base"
+@import "base/typography"
 @import "layout/nav"
 @import "layout/header"
 @import "components/forward-backward"
@@ -11,4 +13,5 @@
 @import "pages/welcome"
 @import "pages/config"
 @import "pages/favs"
+@import "pages/event"
 @import "themes/dark"
