--- a/src/assets/sass/pages/_config.sass
+++ b/src/assets/sass/pages/_config.sass
@@ -1,4 +1,13 @@
 .config
+  margin-bottom: 3rem
+  padding-bottom: 1rem
+  &__return
+    display: flex
+    position: sticky
+    position: -webkit-sticky
+    top: calc(3rem - 1px)
+    background-color: $color__black
+    z-index: 10
   &__mode
     display: flex
     &--dark,
