--- a/src/assets/sass/components/_return.sass
+++ b/src/assets/sass/components/_return.sass
@@ -2,5 +2,14 @@
   display: flex
   align-items: center
   & > p
-    padding-left: 1rem
-    padding-right: 1rem
+    padding:
+      left: 1rem
+      right: 1rem
+
+.backward-text
+  display: flex
+  align-items: center
+  & > p
+    padding:
+      left: 1rem
+      right: 1rem
