--- a/src/assets/sass/pages/_favs.sass
+++ b/src/assets/sass/pages/_favs.sass
@@ -9,7 +9,9 @@
     padding: 1rem
     margin-left: 2rem
     margin-top: 1rem
-    margin-bottom: 2rem
+    margin-bottom: 1rem
+    &:last-child
+      margin-bottom: 2rem
     &--list
       padding-left: 1rem
       font-weight: 500
