--- a/src/assets/sass/layout/_nav.sass
+++ b/src/assets/sass/layout/_nav.sass
@@ -3,7 +3,7 @@
     position: fixed
     right: 0
     top: 0
-    height: 45px
+    height: 3rem
     width: 25%
     & > ul,
     & > ul > li
@@ -20,7 +20,8 @@
     left: 0
     right: 0
     bottom: 0
-    height: 45px
+    height: 3rem
+    z-index: 5
     & > ul
       display: grid
       grid-template-columns: repeat(4, 25%)
@@ -38,7 +39,7 @@
       width: 100%
     & > ul > .nav__menu--favs
       color: $color__red
-      font-variation-settings: 'wght' 700
+      font-weight: 700
       & > a
         flex-direction: column
         font-size: 14px
