--- a/src/assets/sass/base/_base.sass
+++ b/src/assets/sass/base/_base.sass
@@ -1,4 +1,9 @@
 body 
   font-family: 'text'
-  font-variation-settings: 'wght' 375
+  font-weight: 375
   font-size: .9rem
+  line-height: 1.2rem
+.container
+  padding-top: 1rem
+  padding-left: 1rem
+  padding-bottom: 1rem
