--- a/src/assets/sass/base/_reset.sass
+++ b/src/assets/sass/base/_reset.sass
@@ -1,11 +1,11 @@
 h1,
+h2,
 p
   margin: initial
 ul
   list-style: none
   padding: initial
   margin: initial
-
 a 
   text-decoration: none
   color: unset
