--- a/src/assets/sass/layout/_header.sass
+++ b/src/assets/sass/layout/_header.sass
@@ -1,14 +1,11 @@
 .header
   height: 75px
-  box-shadow: inset 0 -1px
   padding-left: 1rem
   padding-bottom: 1rem
   display: flex
   flex-direction: column
   justify-content: flex-end
-  & > h1
-    font-size: 1.1rem
   & > h1:last-child
     margin-top: .25rem
-    & > strong
-      font-variation-settings: 'wght' 600
+    & > span
+      font-weight: 375
