--- a/src/assets/sass/pages/_config.sass
+++ b/src/assets/sass/pages/_config.sass
@@ -1,4 +1,13 @@
 .config
+  margin-bottom: 3rem
+  padding-bottom: 1rem
+  &__return
+    display: flex
+    position: sticky
+    position: -webkit-sticky
+    top: calc(3rem - 1px)
+    background-color: $color__black
+    z-index: 10
   &__mode
     display: flex
     &--dark,
@@ -31,10 +40,11 @@
       position: relative
       margin-left: 1rem
       margin-top: 1rem
-      min-height: calc(3rem - 1rem)
+      min-height: 3rem
       display: flex
       align-items: center
-      padding: .5rem
+      padding-left: 1rem
+      padding-right: 1rem
       & > input
         position: absolute
         display: block
