--- a/src/assets/sass/components/_days.sass
+++ b/src/assets/sass/components/_days.sass
@@ -9,6 +9,7 @@
     width: calc(100% - 6rem - 2rem)
     display: flex
     align-items: center
+    justify-content: space-between
     padding-left: 1rem
     padding-right: 1rem
-    font-size: 1rem
+    font-size: 1.1rem
