--- a/src/assets/sass/components/_days.sass
+++ b/src/assets/sass/components/_days.sass
@@ -1,10 +1,11 @@
 .days
-  display: flex
-  align-items: center
   position: -webkit-sticky
   position: sticky
   top: calc(3rem - 1px)
   z-index: 5
+  &__list
+    display: flex
+    align-items: center
   &__date
     width: calc(100% - 6rem - 2rem)
     display: flex
