--- a/src/assets/sass/pages/_event.sass
+++ b/src/assets/sass/pages/_event.sass
@@ -22,39 +22,39 @@
       padding-left: 1rem
       padding-right: 1rem
   &__content
-    padding: 2rem
+    padding:
+      top: 1rem
+      bottom: 2rem
+      left: 1rem
     margin-bottom: 3rem
     &--title > h2
       margin-top: .25rem
+      padding-right: 1rem
     &--description
       margin-top: 1rem
-      padding-left: 2rem
+      padding:
+        left: 2rem
+        right: 1rem
       & > p
         margin-bottom: .5rem
       & > p:last-child
         margin-bottom: unset
-        &::after
-          content: '"'
-          margin-left: -0.5rem
-      & > p:first-child::before
-        content: '"'
-        margin-right: -0.5rem
   &__map,
   &__fav
     display: flex
     min-height: calc(3rem - .5rem)
     justify-content: center
     flex-direction: column
-    position: relative
-    right: -1rem
   &__map
     padding: .25rem 1rem
-    margin-left: 1rem
-  &__fav
     margin:
-      left: 1rem
+      left: 2rem
       top: 1rem
-      bottom: 1rem
+  &__fav
+    position: relative
+    margin:
+      left: 2rem
+      top: 2rem
     & > input
       position: absolute
       top: 0
