--- a/src/assets/sass/pages/_favs.sass
+++ b/src/assets/sass/pages/_favs.sass
@@ -5,15 +5,19 @@
     & > p:last-child
       margin-top: .25rem
   &__array
-    display: block
-    padding: 1rem
-    margin-left: 2rem
-    margin-top: 1rem
-    margin-bottom: 1rem
+    margin:
+      left: 2rem
+      top: 1rem
+    & > a
+      display: block
+      padding: 1rem
     &:last-child
       margin-bottom: 2rem
     &--list
       padding-left: 1rem
-      font-weight: 500
       margin-top: .5rem
       margin-bottom: .5rem
+      & > li > span:first-child
+        font-weight: 500
+      & > li:last-child > span:last-child
+        display: none
