map view design

--- a/src/assets/sass/abstracts/_variables.sass
+++ b/src/assets/sass/abstracts/_variables.sass
@@ -7,3 +7,10 @@ $color__red: #BA2123
 $color__blue: #306998
 $color__yellow: #FFD43B
 $color__light-gray: #BBBBBB
+
+// ----------
+// MEASUREMENTS
+// ----------
+$header: 4.5rem
+$nav: 3rem
+$main-height: 3rem
