--- a/src/assets/sass/themes/_dark.sass
+++ b/src/assets/sass/themes/_dark.sass
@@ -25,6 +25,8 @@ body
 .border-shadow-y
   box-shadow: inset 0 1px $color__light-gray, inset 0 -1px $color__light-gray
 
+.border-top
+  border-top: 1px solid $color__light-gray
 .border-bottom
   border-bottom: 1px solid $color__light-gray
 .border-y
