--- a/src/assets/sass/base/_base.sass
+++ b/src/assets/sass/base/_base.sass
@@ -7,3 +7,8 @@ body
   padding-top: 1rem
   padding-left: 1rem
   padding-bottom: 1rem
+
+.arrow-open
+  transform: rotate(90deg) scaleX(-1)
+.arrow-closed
+  transform: rotate(90deg) scaleX(1)
