--- a/src/assets/sass/pages/_welcome.sass
+++ b/src/assets/sass/pages/_welcome.sass
@@ -15,6 +15,9 @@
         padding-right: 1rem
         padding-left: 1rem
         width: calc(100% - 5rem)
+        & > .welcome__lang--flag
+          display: inline-block
+          font-size: 1.5rem
   &__mode
     display: flex
     &--item
