--- a/src/assets/sass/main.sass
+++ b/src/assets/sass/main.sass
@@ -1,4 +1,5 @@
 @import "vendor/normalize"
+@import "vendor/symbiosis"
 @import "abstracts/variables"
 @import "abstracts/mixin"
 @import "base/font"
@@ -14,5 +15,6 @@
 @import "pages/config"
 @import "pages/favs"
 @import "pages/event"
+@import "pages/day-detailed"
 @import "pages/map"
 @import "themes/dark"
